--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -1,6 +1,6 @@
 .featured-img {
     width: 100%;
-    height: 350px;
+    height: 250px;
     object-fit: cover;
     border-radius: calc(0.24rem - 1px);
 }
@@ -25,4 +25,9 @@
 
 .unstyle-category{
     text-decoration: none;
+}
+
+.card-body .btn {
+        display: block;
+        margin-top: 10px;
 }
